--- a/cts/cts.html
+++ b/cts/cts.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Rajdhani:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>CTS</title>
   </head>
   <body>
     <nav class="navbar navbar-light bg-light">
