Se agrego funciones para los option

--- a/cts/cts.html
+++ b/cts/cts.html
@@ -89,8 +89,8 @@
             id="asignacion"
             onkeyup="sumar()"
           >
-            <option value="0.00">No</option>
-            <option value="102.50">Si</option>
+            <option onkeyup="sumar()" value="0.00">No</option>
+            <option onkeyup="sumar()" value="102.50">Si</option>
           </select>
         </div>
         <div class="col-12 fila">
